// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<API /> should render two API keys 1`] = `
<div>
  <API__APIKeysHeader>
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={0}
      shrink={1}
    >
      <div
        style={
          Object {
            "whiteSpace": "wrap",
          }
        }
      >
        <span>
          Manage API keys for accessing the 
        </span>
        <ExternalLink
          href="https://www.virtool.ca/docs/web-api/authentication.html"
        >
          Virtool API
        </ExternalLink>
        <span>
          .
        </span>
      </div>
    </FlexItem>
    <Link
      to={
        Object {
          "state": Object {
            "createAPIKey": true,
          },
        }
      }
    >
      Create
    </Link>
  </API__APIKeysHeader>
  <Connect(APIKey)
    apiKey={
      Object {
        "id": "foo",
      }
    }
    key="foo"
  />
  <Connect(APIKey)
    apiKey={
      Object {
        "id": "bar",
      }
    }
    key="bar"
  />
  <Connect(CreateAPIKey) />
</div>
`;

exports[`<API /> should render when loading API keys 1`] = `
<LoadingPlaceholder
  margin="150px"
/>
`;

exports[`<API /> should render with 0 API keys 1`] = `
<div>
  <API__APIKeysHeader>
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={0}
      shrink={1}
    >
      <div
        style={
          Object {
            "whiteSpace": "wrap",
          }
        }
      >
        <span>
          Manage API keys for accessing the 
        </span>
        <ExternalLink
          href="https://www.virtool.ca/docs/web-api/authentication.html"
        >
          Virtool API
        </ExternalLink>
        <span>
          .
        </span>
      </div>
    </FlexItem>
    <Link
      to={
        Object {
          "state": Object {
            "createAPIKey": true,
          },
        }
      }
    >
      Create
    </Link>
  </API__APIKeysHeader>
  <NoneFoundBox
    noun="API keys"
  />
  <Connect(CreateAPIKey) />
</div>
`;
